--- a/www/conf/http/servers/http.conf
+++ b/www/conf/http/servers/http.conf
@@ -2,8 +2,7 @@
 
 # www.chrono.com
 server {
-    listen 80;
-    listen 8080;
+    listen 8083;
 
     # try unix socket
     # curl --unix-socket /tmp/test.sock http://localhost
@@ -15,10 +14,7 @@ server {
     access_log  logs/http_access.log
                 main buffer=2k flush=1s;
 
-    allow 127.0.0.1;
-    #allow unix:;
-
-    deny all;
+    allow all;
 
     default_type text/html;
 
@@ -30,4 +26,5 @@ server {
         index  index.html index.htm;
     }
 }
+
 
