--- a/www/conf/http/servers/http2.conf
+++ b/www/conf/http/servers/http2.conf
@@ -3,8 +3,7 @@
 # http www.metroid.net
 # redirect to https
 server {
-    listen 80;
-    listen 8080;
+    listen 8083;
     server_name  www.metroid.net;
 
     #rewrite ^ https://$host:8443$request_uri permanent;
@@ -17,7 +16,7 @@ server {
 
 # http2 www.metroid.net
 server {
-    listen 443 ssl;
+    listen 1443 ssl;
     listen 8443 ssl http2;
 
     server_name  www.metroid.net;
@@ -26,8 +25,7 @@ server {
     access_log  logs/http2_access.log
                 main buffer=2k flush=1s;
 
-    allow 127.0.0.1;
-    deny all;
+    allow all;
 
     default_type text/html;
 
@@ -61,4 +59,5 @@ server {
         index  index.html index.htm;
     }
 }
+
 
