--- a/www/conf/http/servers/origin.conf
+++ b/www/conf/http/servers/origin.conf
@@ -5,15 +5,14 @@
 # Or else OpenResty will be blocked in resolving
 
 server {
-    listen 80;
+    listen 8083;
 
     server_name  origin.io;
 
     access_log  logs/origin_access.log
                 main buffer=2k flush=1s;
 
-    allow 127.0.0.1;
-    deny all;
+    allow all;
 
     #default_type text/html;
     default_type text/plain;
@@ -29,4 +28,5 @@ server {
         content_by_lua_file lua/origin.lua;
     }
 }
+
 
