--- a/www/conf/http/servers/http.conf
+++ b/www/conf/http/servers/http.conf
@@ -25,6 +25,10 @@ server {
         root   html;
         index  index.html index.htm;
     }
+
+    location /playground/ {
+        content_by_lua_file lua/$1.lua;
+    }
 }
 
 
