--- a/www/conf/http/servers/http.conf
+++ b/www/conf/http/servers/http.conf
@@ -20,7 +20,7 @@ server {
 
     include http/servers/locations.inc;
 
-    location /playground/ {
+    location /playground/(.*?) {
         content_by_lua_file lua/$1.lua;
     }
 }
