--- a/www/conf/http/servers/http.conf
+++ b/www/conf/http/servers/http.conf
@@ -20,8 +20,10 @@ server {
 
     include http/servers/locations.inc;
 
-    location /playground/(.*?) {
-        content_by_lua_file lua/$1.lua;
+    location / {
+        #return 200 "hello world by http";
+        root   html;
+        index  index.html index.htm;
     }
 }
 
