--- a/www/conf/http/servers/https.conf
+++ b/www/conf/http/servers/https.conf
@@ -138,7 +138,7 @@ server {
 
 # session ticket
 server {
-    listen 1442 ssl;
+    listen 8442 ssl;
 
     server_name  www.chrono.com;
 
@@ -163,7 +163,7 @@ server {
     include http/servers/locations.inc;
 
     location / {
-        return 200 "hello world by session ticket";
+        return 200 "hello https!";
         #root   html;
         #index  index.html index.htm;
     }
