--- a/www/conf/http/servers/https.conf
+++ b/www/conf/http/servers/https.conf
@@ -59,7 +59,7 @@ server {
     include http/servers/locations.inc;
 
     location / {
-        #return 200 "hello world by https";
+        return 200 "hello world by https";
         root   html;
         index  index.html index.htm;
     }
