--- a/www/conf/http/servers/https.conf
+++ b/www/conf/http/servers/https.conf
@@ -60,8 +60,8 @@ server {
 
     location / {
         return 200 "hello world by https";
-        root   html;
-        index  index.html index.htm;
+        # root   html;
+        # index  index.html index.htm;
     }
 }
 
